# Software-design-course-HSE2020

./: .CMakeLists.txt.swp  .main.cpp.swp  .travis.yml  CMakeLists.txt  README.md  main.cpp
CLI/: ARG_PARSER.md  CMakeLists.txt  README.md  main.cpp
CLI/inc/: application.h  command.h  environment.h  executor.h  result.h
CLI/inc/commands/: assignment_command.h  cat_command.h  command.h  command_factory.h  echo_command.h  execution_result.h  exit_command.h  external_command.h  grep_command.h  pwd_command.h  wc_command.h
CLI/inc/parser/: commands_parser.h  parse_result.h  parser.h  token.h  tokenizer.h  variables_substitutor.h
CLI/lib/googletest/googletest/: CMakeLists.txt
CLI/src/: application.cpp  environment.cpp  executor.cpp  main.cpp
CLI/src/commands/: assignment_command.cpp  cat_command.cpp  command_factory.cpp  echo_command.cpp  exit_command.cpp  external_command.cpp  grep_command.cpp  pwd_command.cpp  wc_command.cpp
CLI/src/parser/: commands_parser.cpp  parser.cpp  tokenizer.cpp  variables_substitutor.cpp
CLI/test/: command_factory_test.cpp  commands_test.cpp  environment_test.cpp  executor_test.cpp  parser_test.cpp  test.cpp
CLI/test/resources/: test.txt
